# Projects

flux-local/: .env.example  .gitignore  README.md
flux-local/apps/backend/: pyproject.toml
flux-local/apps/backend/alembic/: env.py
flux-local/apps/backend/alembic/versions/: 148cb7718818_initial_schema.py
flux-local/apps/backend/app/: main.py
flux-local/apps/backend/app/api/: deps.py  schemas.py  ws.py
flux-local/apps/backend/app/api/routes/: batch.py  edit.py  generate.py  health.py  history.py  images.py  jobs.py
flux-local/apps/backend/app/core/: config.py  logging.py
flux-local/apps/backend/app/db/: models.py  session.py
flux-local/apps/backend/app/inference/: interface.py  registry.py  types.py
flux-local/apps/backend/app/inference/backends/: mflux_backend.py  mock_backend.py
flux-local/apps/backend/app/queue/: events.py  worker.py
flux-local/apps/backend/app/storage/: image_store.py  uploads.py
flux-local/apps/backend/tests/: conftest.py  test_api.py  test_inference.py  test_storage.py
flux-local/apps/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
flux-local/scripts/: dev.sh  download-model.sh  smoke_test.py
image-generator/: README.md  app.js  index.html  styles.css
portfolio/: README.md  package-lock.json  package.json
portfolio-3d/: README.md  index.html
portfolio/src/app/: globals.css  layout.tsx  page.tsx
portfolio/src/components/: brand-icons.tsx  footer.tsx  motion.tsx  navbar.tsx  placeholder-note.tsx  section-heading.tsx
portfolio/src/lib/: data.ts
(+32 files in other folders)
