[project]
name = "flux-local-backend"
version = "1.0.0"
description = "Local-first FLUX image generation & editing backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pillow>=10.3",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
# Apple Silicon inference path. Install on a Mac: `uv pip install -e '.[mac]'`.
mac = ["mflux>=0.4", "mlx>=0.15", "huggingface_hub>=0.23"]
# Portable CUDA/MPS path.
cuda = ["diffusers>=0.30", "transformers>=4.44", "accelerate>=0.33"]
dev = ["ruff>=0.5", "pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
